# thunder_fighter

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  README_CN.md  README_ZH.md  demo_background.py  demo_new_input.py  main.py  main_refactored.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_enemy_design.py  thunder_fighter.py  uml_class_diagram.md  uml_class_diagram_副本.md
.github/workflows/: ci.yml
.specstory/history/: 2025-03-22_06-52-使用python制作雷霆战机游戏.md  2025-03-24_09-12-python代码模块化最佳实践.md
docs/: ADVANCED_ITEM_SYSTEM.md  ARCHITECTURE.md  ARCHITECTURE_ZH.md  CI_CD_GUIDE.md  DETAILS.md  DETAILS_CN.md  DETAILS_ZH.md  DEVELOPMENT_HISTORY.md  DEVELOPMENT_ROADMAP.md  DIRECTORY_STRUCTURE_ANALYSIS.md  FONT_SYSTEM_AND_LOCALIZATION.md  GAME_MECHANICS.md  GAME_MECHANICS_ZH.md  INPUT_SYSTEM_CLEAN_DESIGN_PLAN.md  INTERFACE_REFACTORING_PLAN.md  PSEUDO_3D_CODE_CHANGES.md  PSEUDO_3D_IMPLEMENTATION_DESIGN.md  PSEUDO_3D_PROPOSAL.md  PSEUDO_3D_PROPOSAL_REVIEW.md  STATE_MANAGEMENT_SYSTEM.md  TECHNICAL_DETAILS.md  TECHNICAL_DETAILS_ZH.md  TESTING_GUIDE.md  TESTING_GUIDE_ZH.md  TEST_CASE_REVIEW.md  TEST_CLEANUP_SUMMARY.md  TEST_ISOLATION_ANALYSIS.md  TEST_ISOLATION_FINAL_SUMMARY.md  TEST_ISOLATION_SOLUTION.md  TEST_POINTS_CATALOG.md  UI_REFACTORING_SUMMARY.md  UML_CLASS_DIAGRAMS.md
docs/archive/implementation_reviews/: BACKGROUND_SYSTEM_UPDATE_DEPRECATED.md  IMPLEMENTATION_SUMMARY.md  INTERFACE_TESTABILITY_EVALUATION.md  TEST_CASE_REVIEW.md  TEST_CLEANUP_SUMMARY.md
docs/archive/input_system_plans/: INPUT_SYSTEM_IMPROVEMENT_EXECUTION_PLAN.md  INPUT_SYSTEM_TESTABILITY_IMPROVEMENTS.md
docs/archive/project_analysis/: FURTHER_IMPROVEMENTS_PLAN.md  MODULAR_REFACTORING_PLAN_D.md  OPEN_SOURCE_PREPARATION_PLAN.md  PROJECT_OPTIMIZATION_SUMMARY_DEPRECATED.md
docs/archive/refactoring_summaries/: PROJECT_STANDARDIZATION_IMPLEMENTATION.md  REFACTORING_COMPLETION_SUMMARY.md  SEPARATION_OF_CONCERNS_SUMMARY.md
examples/: separation_of_concerns_demo.py  state_management_demo.py
scripts/: convert_chinese_to_english.py  translate_comments.py  translate_comments_final.py  translate_comments_v2.py  update_imports.py
tests/: test_boss_defeat_level_up.py  test_game.py  test_game_victory.py  test_level_progression.py  test_separation_of_concerns.py
tests/e2e/: __init__.py  test_game_flow.py
tests/events/: __init__.py  test_event_system.py
tests/graphics/: __init__.py  test_background.py  test_renderers.py  test_ui_components.py
tests/integration/: __init__.py  test_event_flow.py  test_player_combat_integration.py
tests/localization/: __init__.py  test_localization_system.py
tests/sprites/: __init__.py  test_boss.py  test_enemy.py  test_items.py  test_player.py
tests/state/: __init__.py  test_game_state.py  test_state_machine.py
tests/systems/: __init__.py  test_collision_system.py  test_physics_system.py  test_scoring_system.py  test_spawning_system.py
tests/unit/: __init__.py  test_boss_spawn_timing.py  test_intelligent_item_system.py  test_localization.py  test_new_input_system.py  test_pause_manager.py
tests/unit/entities/: __init__.py  test_enemy_entity.py  test_factories.py
tests/unit/entities/player/: test_player_entity.py  test_player_simple.py  test_wingman_entity.py
tests/unit/entities/projectiles/: test_bullets.py  test_logic.py  test_missile.py  test_projectile_factory.py
tests/utils/: test_collisions.py  test_config_manager.py  test_resource_manager.py  test_sound_manager.py
thunder_fighter/: __init__.py  config.py  constants.py  game.py  game_refactored.py  game_with_state_management.py
thunder_fighter/config/: __init__.py  pseudo_3d_config.py
thunder_fighter/entities/: __init__.py  base.py  base_3d.py  boss_factory.py  enemy_factory.py  entity_factory.py  item_factory.py  projectile_factory.py
thunder_fighter/entities/enemies/: __init__.py  boss.py  boss_factory.py  enemy.py  enemy_factory.py
thunder_fighter/entities/items/: __init__.py  item_factory.py  items.py
thunder_fighter/entities/player/: __init__.py  player.py  wingman.py
thunder_fighter/entities/projectiles/: __init__.py  bullets.py  logic.py  missile.py  projectile_factory.py
thunder_fighter/events/: __init__.py  event_system.py  game_events.py
thunder_fighter/graphics/: __init__.py  background.py  depth_renderer.py  effects.py  image_cache.py  performance_monitor.py  renderers.py  ui_manager.py  ui_manager.py.backup  ui_manager_original.py  ui_manager_refactored.py
thunder_fighter/graphics/effects/: __init__.py  explosion.py  explosions.py  flash_effects.py  notifications.py  particles.py  stars.py
thunder_fighter/graphics/ui/: __init__.py  boss_status_display.py  dev_info_display.py  game_info_display.py  health_bar.py  manager.py  notification_manager.py  player_stats_display.py  screen_overlay_manager.py
thunder_fighter/graphics/ui/components/: __init__.py  boss_status_display.py  dev_info_display.py  game_info_display.py  health_bar.py  notification_manager.py  player_stats_display.py  (+1 more)
thunder_fighter/graphics/ui_components/: game_info_display.py  player_stats_display.py
thunder_fighter/input/: __init__.py  input_handler.py  input_manager.py  input_system.py  key_bindings.py
thunder_fighter/input/adapters/: __init__.py  pygame_adapter.py  test_adapter.py
thunder_fighter/input/core/: __init__.py  boundaries.py  commands.py  events.py  processor.py
thunder_fighter/localization/: __init__.py  en.json  en.py  font_support.py  loader.py  zh.json  zh.py
thunder_fighter/sprites/: __init__.py  boss.py  bullets.py  enemy.py  explosion.py  items.py  missile.py  player.py  wingman.py
thunder_fighter/state/: __init__.py  game_state.py  game_states.py  state_machine.py
thunder_fighter/systems/: __init__.py  collision.py  physics.py  scoring.py  spawning.py
thunder_fighter/systems/input/: __init__.py  bindings.py  events.py  facade.py  handler.py  manager.py
thunder_fighter/utils/: collisions.py  config_manager.py  config_tool.py  logger.py  pause_manager.py  resource_manager.py  score.py  sound_manager.py  stars.py
(+8 files in other folders)
